--- a/catalogSiteExample/index.html
+++ b/catalogSiteExample/index.html
@@ -70,17 +70,17 @@
 		<li class="first_level"><a href="">COMPÉTENCES</a>
 			<ul class="second-nav">
 				<li>
-					<a href="themLink "><b>EN COURS DE CONSTRUCTION</b></a>
+					<a><b>EN COURS DE CONSTRUCTION</b></a>
 					<ul class="third-nav" style="display: none;">
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="themLink "><b>EN COURS DE CONSTRUCTION</b></a>
+					<a ><b>EN COURS DE CONSTRUCTION</b></a>
 					<ul class="third-nav" style="display: none;">
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
 					</ul>
 				</li>
 			</ul>
