--- a/catalogSiteExample/subThem.html
+++ b/catalogSiteExample/subThem.html
@@ -67,20 +67,20 @@
 				</li>
 			</ul>
 		</li>
-		<li><a href="">COMPÉTENCES</a>
+		<li><a >COMPÉTENCES</a>
 			<ul class="second-nav">
 				<li>
-					<a href=" themLink "><b>EN COURS DE CONSTRUCTION</b></a>
+					<a ><b>EN COURS DE CONSTRUCTION</b></a>
 					<ul class="third-nav" style="display: none;">
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
+						<li><a>EN COURS DE CONSTRUCTION</a></li>
+						<li><a>EN COURS DE CONSTRUCTION</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href=" themLink "><b>EN COURS DE CONSTRUCTION</b></a>
+					<a ><b>EN COURS DE CONSTRUCTION</b></a>
 					<ul class="third-nav" style="display: none;">
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
-						<li><a href=" Credit immobilier ">EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
+						<li><a >EN COURS DE CONSTRUCTION</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -113,7 +113,7 @@
 		</template>
 		
 		<template id="col_template">
-		  <a class="column" href="" >
+		  <a class="column" >
 			<img class="item_img" src="img/item.png" alt="item">
 			<p class="subtheme_title"></p>
 			<p class="item_title"></p>
@@ -122,6 +122,7 @@
 		</template>
 		
 		<script>
+			generateCats(thems);
 			generateDropDownList(thems);
 			generateSubThemItmes(thems);
 		</script>
