--- a/catalogSiteExample/Item.html
+++ b/catalogSiteExample/Item.html
@@ -122,7 +122,7 @@
 		<div class="search-results"></div>
 	</div>
 	
-	-->
+	
 	<div id="cats" class="container">
 		<template id="row_template">
 			<div class="row">
@@ -141,11 +141,8 @@
 			
 		  </a>
 		</template>
-		
-
-
 	</div>
-	
+	-->
 	<iframe id="myIframe" src=""  ></iframe>
 	
 	<script type="text/javascript">
@@ -168,5 +165,5 @@
 
 	<!-- <script type="text/javascript" src="js/searchBox.js"></script> -->
 </body>
-<footer >Copyright @ ESBanque</footer>
+<footer style = "    position: fixed;bottom: 0;width: 100%;">Copyright @ ESBanque</footer>
 </html>
